# lvs

./: Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml  release.yml
correlation/: README.md  counter.v  routed-counter.md  run.sh  sky130-magic.md
docs/: engines-integration.md
examples/: gen_hier.rs  gen_layout.rs
examples/bandgap/: bug.spice  layout.spice  match.lvs  mismatch.lvs  schematic.spice
examples/inv/: hier.lvs  hier.rules  hier_schematic.spice  inv_hier.gds
examples/inv_chain/: bug.spice  layout.spice  match.lvs  mismatch.lvs  schematic.spice
src/: compare.rs  engine.rs  extract.rs  job.rs  lib.rs  main.rs  spice.rs
tests/: example.rs  extract.rs
