[package]
name = "vyges-lvs"
version = "0.0.1"
edition = "2021"
description = "Layout-vs-schematic: SPICE netlist comparison with clear divergence diagnostics."
license = "Apache-2.0"
authors = ["Vyges <https://vyges.com/contact>"]
homepage = "https://vyges.com"
repository = "https://github.com/vyges-tools/lvs"

# No third-party deps (builds/tests offline). The geometry kernel comes from the
# vyges-layout foundation (was vendored under src/layout/) — sibling-checkout path
# dep in dev; release pins a git/version dep.
[dependencies]
vyges-layout = { path = "../vyges-tools-layout" }

[[bin]]
name = "vyges-lvs"
path = "src/main.rs"

[lib]
name = "vyges_lvs"
path = "src/lib.rs"
